--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,14 +1,23 @@
 /* Login.css */
+.login-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 3px;
+    background-color: #f5f5f5;
+}
 
-.container {
+.login-container {
     background: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: 400px;
     text-align: center;
+    padding: 10px;
 }
 
-h3 {
+.login-h3 {
     margin-bottom: 1.5rem;
     color: #4a4a4a;
 }
@@ -18,7 +27,7 @@ form {
     flex-direction: column;
 }
 
-label {
+.login-lable {
     text-align: left;
     margin-bottom: 0.5rem;
     color: #666;
