--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -1,3 +1,11 @@
+.profile-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 3px;
+    background-color: #f5f5f5;
+}
 .profile-container {
     display: flex;
     justify-content: center;
