--- a/src/styles/StudentPage.css
+++ b/src/styles/StudentPage.css
@@ -1,5 +1,12 @@
 /* StudentPage.css */
-
+.student-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 3px;
+    background-color: #f5f5f5;
+}
 .student-page-container {
     display: flex;
     flex-direction: column;
