--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,12 +1,12 @@
 /* Login.css */
 
-.container {
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    text-align: center;
-}
+/*.container {*/
+/*    background: white;*/
+/*    border-radius: 8px;*/
+/*    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
+/*    width: 400px;*/
+/*    text-align: center;*/
+/*}*/
 
 h3 {
     margin-bottom: 1.5rem;
