--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -1,23 +1,23 @@
 /* Register.css */
 
-body {
-    font-family: Arial, sans-serif;
-    background: #f9f9f9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
+/*body {*/
+/*    font-family: Arial, sans-serif;*/
+/*    background: #f9f9f9;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;* /
+/*    height: 100vh;*/
+/*    margin: 0;*/
+/*}*/
 
-.container {
-    background: white;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    text-align: center;
-}
+/*.container {*/
+/*    background: white;*/
+/*    padding: 2rem;*/
+/*    border-radius: 8px;*/
+/*    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
+/*    width: 400px;*/
+/*    text-align: center;*/
+/*}*/
 
 h2 {
     padding-bottom: 20px;
