--- a/src/styles/AdminDashboard.css
+++ b/src/styles/AdminDashboard.css
@@ -43,7 +43,7 @@
     color: #fff;
 }
 
-button {
+.admin-nav-bar button {
     color: white;
     text-decoration: none;
     font-size: 18px;
@@ -54,7 +54,7 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.admin-nav-bar button:hover {
     background-color: #06397b;
     color: #fff;
 }
