--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -6,34 +6,9 @@
     height: 100vh;
     padding: 3px;
     background-color: #f5f5f5;
+
 }
 
-.login-container {
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    text-align: center;
-    padding: 10px;
-}
-
-
-
-.login-h3 {
-    margin-bottom: 1.5rem;
-    color: #4a4a4a;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-.login-lable {
-    text-align: left;
-    margin-bottom: 0.5rem;
-    color: #666;
-}
 .logo {
     display: block;
     max-width: 80px;
@@ -42,13 +17,10 @@ form {
     padding: 0;
 }
 
-input {
-    width: 80%;
-    padding: 0.75rem;
-    margin-bottom: 1rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 1rem;
+.button-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 button {
