--- a/src/styles/StudentPage.css
+++ b/src/styles/StudentPage.css
@@ -1,82 +1,35 @@
 /* StudentPage.css */
-.student-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    padding: 3px;
-    background-color: #eef2f5;
-    font-family: 'Arial', sans-serif;
-}
 
-.student-page-container {
-    display: flex;
-    flex-direction: column;
-    height: 95vh;
-    width: 800px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
-    background-color: #fff;
-}
+/*.student-page-container {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    height: 100vh;*/
+/*    width: 800px;*/
+/*}*/
 
-.student-nav-bar {
-    background-color: #074E9F;
-    display: flex;
-    justify-content: space-around;
-    padding: 15px 0;
-    border-bottom: 3px solid #06397b;
-}
+/*.student-nav-bar {*/
+/*    background-color: #074E9F;*/
+/*    display: flex;*/
+/*    justify-content: space-around;*/
+/*    padding: 10px 0;*/
+/*}*/
 
-.nav-link {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 10px 20px;
-    transition: background-color 0.3s, color 0.3s;
-    border-radius: 4px;
-}
+/*.nav-link {*/
+/*    color: white;*/
+/*    text-decoration: none;*/
+/*    font-size: 18px;*/
+/*    padding: 10px 15px;*/
+/*    transition: background-color 0.3s, color 0.3s;*/
+/*}*/
 
-.nav-link:hover {
-    background-color: #06397b;
-    color: #fff;
-}
+/*.nav-link:hover {*/
+/*    background-color: #074E9F;*/
+/*    color: #fff;*/
+/*}*/
 
-button {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 10px 20px;
-    transition: background-color 0.3s, color 0.3s;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #06397b;
-    color: #fff;
-}
-
-.student-content {
-    flex: 1;
-    padding: 20px;
-    background-color: #f8f9fa;
-    overflow-y: auto;
-}
-
-.welcome-banner {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.welcome-banner h1 {
-    font-size: 36px;
-    color: #074E9F;
-    margin-bottom: 10px;
-}
-
-.welcome-banner p {
-    font-size: 18px;
-    color: #555;
-}
+/*.student-content {*/
+/*    flex: 1;*/
+/*    padding: 20px;*/
+/*    background-color: #f4f4f4;*/
+/*    overflow-y: auto;*/
+/*}*/
